<resources>
    <string name="app_name">WanAndroid</string>
    <string name="layout_open">打开</string>
    <string name="layout_close">关闭</string>
    <string name="my_like">我喜欢的</string>
    <string name="about_us">关于我们</string>
    <string name="register_description">注册成功后会自动登录</string>
    <string name="home_title">首页</string>
    <string name="knowledge_title">知识体系</string>
    <string name="exit_system">再按一次退出程序</string>
    <string name="hot_title">Hot</string>
    <string name="search_title">Search</string>
    <string name="menu_share">分享</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_system_browser">用系统浏览器打开</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="hot_search">大家都在搜</string>
    <string name="commonly_use_websites">常用网站</string>
    <string name="show_hide_behavior">com.kolarbear.wanandroid.widget.ShowHideBehavior</string>
    <string name="no_data">这里空空的…</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>如果您有任何好的建议：</p>
            <ul>
                <li>\t\t关于网站排版</li>
                <li>\t\t关于新增常用网址以及工具</li>
                <li>\t\t未来你希望增加的功能等</li>
            </ul>
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/wangzailfm/wanandroidclient" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
</resources>
